# easy-nyc-ingest

./: .gitignore  LICENSE  README.md  assets.csv  datasets.yaml  pyproject.toml  superscrape.py  test.csv  w.py
pipeline/: constants.py  datasets.py  definitions.py
pipeline/defs/assets/nyc/buildings/: nyc_dob_safety_violations.py
pipeline/defs/assets/nyc/crime/: nyc_nypd_arrests.py  nyc_nypd_arrests_historical.py  nyc_nypd_arrests_ytd.py
pipeline/defs/assets/nyc/transit/: mta_daily_ridership.py  mta_operations_statement.py  mta_subway_hourly_ridership.py
pipeline/defs/resources/: polars_parquet_io_manager.py  socrata_resource.py
pipeline/lib/: asset_factories.py  duckdb_wrapper.py  polars_helpers.py
scraped_outputs/json/: 311_service_requests_from_2010_to_present.json
scraped_outputs/py/: nyc_311_requests.py
